test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/static_block_scope_function_declaration.plx
pub fn main(none) i32 {
    #  Can't have static storage class
    #      * on block-scope function declarations
    #      
    data fn foo(none) i32;
    return foo()
}

fn foo(none) i32 {
    return false
}
